@@ -213,6 +213,29 @@ name|getRevision
 argument_list|()
 argument_list|)
 expr_stmt|;
+name|addAttribute
+argument_list|(
+literal|"req-branch"
+argument_list|,
+name|requestedRevisionId
+operator|.
+name|getBranch
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|addAttribute
+argument_list|(
+literal|"req-branch-default"
+argument_list|,
+name|dd
+operator|.
+name|getDependencyRevisionId
+argument_list|()
+operator|.
+name|getBranch
+argument_list|()
+argument_list|)
+expr_stmt|;
 block|}
 specifier|public
 name|DependencyDescriptor
