@@ -103,6 +103,7 @@ for detailed view of each issue, please consult http://issues.apache.org/jira/br
 - FIX: Default retrieve, publish and deliver patterns doesn't include the [classifier] token (IVY-935)
 - FIX: Can't use latest.release for pom dependencies (IVY-936)
 - FIX: Unable to resolve snapshot versions depending on xml elements order (IVY-940)
+- FIX: pre-resolve-dependency event doesn't export branch information (IVY-941) (thanks to Jaroslaw Wypychowski)
 
    2.0.0-rc1
 =====================================
